# qt6jid_recursive

./: CMakeLists.txt  jid.cpp  main.cpp
idn/: CMakeLists.txt
